# center/docs/swagger.yaml
@@ -1410,6 +1410,27 @@ definitions:
         description: 虚拟化平台
         type: string
     type: object
+  model.TerminalMessage:
+    properties:
+      data:
+        type: string
+      session:
+        type: string
+      type:
+        enum:
+        - start
+        - command
+        type: string
+    required:
+    - type
+    type: object
+  model.TerminalRequest:
+    properties:
+      data:
+        type: string
+      session:
+        type: string
+    type: object
   model.TestAgent:
     properties:
       agent_addr:
@@ -1679,6 +1700,158 @@ info:
   title: IDB API Documentation
   version: "1.0"
 paths:
+  /{host}/terminals/session/detach:
+    post:
+      consumes:
+      - application/json
+      description: Detach terminal session
+      parameters:
+      - description: Host ID
+        in: path
+        name: host
+        required: true
+        type: integer
+      - description: Request details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.TerminalRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Detach terminal session
+      tags:
+      - Terminal
+  /{host}/terminals/session/quit:
+    post:
+      consumes:
+      - application/json
+      description: Quit terminal session
+      parameters:
+      - description: Host ID
+        in: path
+        name: host
+        required: true
+        type: integer
+      - description: Request details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.TerminalRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Quit terminal session
+      tags:
+      - Terminal
+  /{host}/terminals/session/rename:
+    post:
+      consumes:
+      - application/json
+      description: Rename terminal session
+      parameters:
+      - description: Host ID
+        in: path
+        name: host
+        required: true
+        type: integer
+      - description: Request details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.TerminalRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Rename terminal session
+      tags:
+      - Terminal
+  /{host}/terminals/sessions:
+    get:
+      consumes:
+      - application/json
+      description: Get agent terminal sessions
+      parameters:
+      - description: Host ID
+        in: path
+        name: host
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Get agent terminal sessions
+      tags:
+      - Terminal
+  /{host}/terminals/ssh/start:
+    get:
+      consumes:
+      - application/json
+      description: Connect to ssh terminal
+      parameters:
+      - description: Host ID
+        in: path
+        name: host
+        required: true
+        type: integer
+      - description: Window cols, default 80
+        in: query
+        name: cols
+        type: integer
+      - description: Window rows, default 40
+        in: query
+        name: rows
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "101":
+          description: Switching Protocols to websocket
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Connect to ssh terminal
+      tags:
+      - Terminal(ssh)
+  /{host}/terminals/start:
+    get:
+      consumes:
+      - application/json
+      description: Create or reconnect to a terminal session through websocket
+      parameters:
+      - description: Host ID
+        in: path
+        name: host
+        required: true
+        type: integer
+      - description: request data send to websocket
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.TerminalMessage'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Create or reconnect to a terminal session through websocket
+      tags:
+      - Terminal
   /auth/sessions:
     delete:
       consumes:
@@ -6727,44 +6900,6 @@ paths:
       summary: valid user
       tags:
       - User
-  /ws/terminals:
-    get:
-      consumes:
-      - application/json
-      description: 终端会话的websocket接口
-      parameters:
-      - description: Host ID
-        in: query
-        name: host_id
-        required: true
-        type: integer
-      - description: Window cols, default 80
-        in: query
-        name: cols
-        type: integer
-      - description: Window rows, default 40
-        in: query
-        name: rows
-        type: integer
-      - description: Host ID
-        in: query
-        name: host_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "101":
-          description: Switching Protocols to websocket
-          schema:
-            type: string
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/model.Response'
-      summary: 终端会话接口
-      tags:
-      - WebSocket
 schemes:
 - http
 swagger: "2.0"
